--- a/dom/styles.css
+++ b/dom/styles.css
@@ -6,3 +6,26 @@
     width: 100px;
     margin: 0;
 }
+
+#square {
+    display: block;
+    background-color: white;
+    height: 100px;
+    width: 100px;
+    margin: 0;
+}
+
+
+#submitButton {
+    background-color: white;
+    height: 30px;
+    width: 70px;
+}
+
+
+#player {
+    width: 50px;
+    height: 50px;
+    background-color: pink;
+    position: absolute;
+}
